--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "shopify": "shopify",
     "prisma": "prisma",
     "graphql-codegen": "graphql-codegen",
-    "vite": "vite"
+    "vite": "vite",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio"
   },
   "type": "module",
   "engines": {
@@ -31,8 +34,9 @@
     "@remix-run/serve": "^2.7.1",
     "@shopify/app-bridge-react": "^4.1.6",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-app-remix": "^3.4.0",
+    "@shopify/shopify-app-remix": "^3.6.0",
     "@shopify/shopify-app-session-storage-prisma": "^5.1.5",
+    "@tanstack/react-query": "^5.64.1",
     "isbot": "^5.1.0",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
