--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "a584fd28cd63a66d60fb6fe599f5c747"
-application_url = "https://hey-kate-chassis-limits.trycloudflare.com"
+application_url = "https://dental-discuss-seats-spirits.trycloudflare.com"
 embedded = true
 name = "Product Builder Pro"
 handle = "product-builder-pro"
@@ -23,9 +23,9 @@ scopes = "write_products"
 
 [auth]
 redirect_urls = [
-  "https://hey-kate-chassis-limits.trycloudflare.com/auth/callback",
-  "https://hey-kate-chassis-limits.trycloudflare.com/auth/shopify/callback",
-  "https://hey-kate-chassis-limits.trycloudflare.com/api/auth/callback"
+  "https://dental-discuss-seats-spirits.trycloudflare.com/auth/callback",
+  "https://dental-discuss-seats-spirits.trycloudflare.com/auth/shopify/callback",
+  "https://dental-discuss-seats-spirits.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
@@ -34,3 +34,4 @@ embedded = false
 [build]
 dev_store_url = "best-foote-forward-development.myshopify.com"
 automatically_update_urls_on_dev = true
+include_config_on_deploy = true
