--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "a584fd28cd63a66d60fb6fe599f5c747"
-application_url = "https://tex-occasion-mhz-tab.trycloudflare.com"
+application_url = "https://comfort-pirates-dna-can.trycloudflare.com"
 embedded = true
 name = "Product Builder Pro"
 handle = "product-builder-pro"
@@ -23,9 +23,9 @@ scopes = "write_products"
 
 [auth]
 redirect_urls = [
-  "https://tex-occasion-mhz-tab.trycloudflare.com/auth/callback",
-  "https://tex-occasion-mhz-tab.trycloudflare.com/auth/shopify/callback",
-  "https://tex-occasion-mhz-tab.trycloudflare.com/api/auth/callback"
+  "https://comfort-pirates-dna-can.trycloudflare.com/auth/callback",
+  "https://comfort-pirates-dna-can.trycloudflare.com/auth/shopify/callback",
+  "https://comfort-pirates-dna-can.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
