--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "^18.20 || ^20.10 || >=21.0.0"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.24.0",
     "@prisma/client": "^5.11.0",
     "@remix-run/dev": "^2.7.1",
     "@remix-run/fs-routes": "^2.15.0",
@@ -37,7 +38,10 @@
     "@shopify/shopify-app-remix": "^3.6.0",
     "@shopify/shopify-app-session-storage-prisma": "^5.1.5",
     "@tanstack/react-query": "^5.64.1",
+    "@tinymce/tinymce-react": "^4.3.0",
     "isbot": "^5.1.0",
+    "openai": "^4.0.0",
+    "playwright": "^1.40.0",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
