--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ database.sqlite
 # Ignore shopify files created during app dev
 .shopify/*
 .shopify.lock
+
+# Ignore prompt logging directory
+/Prompts Used/
