--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.7.1",
     "@remix-run/serve": "^2.7.1",
+    "@shopify/app-bridge": "^3.7.10",
     "@shopify/app-bridge-react": "^4.1.6",
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.6.0",
