--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -33,5 +33,5 @@ embedded = false
 
 [build]
 dev_store_url = "best-foote-forward-development.myshopify.com"
-automatically_update_urls_on_dev = true
+automatically_update_urls_on_dev = false
 include_config_on_deploy = true
